src/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>SW_Type__c</fullName>
        <label>SW Type</label>
        <picklist>
            <picklistValues>
                <fullName>APK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Binary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code Snippet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salesforce_Fields__c</fullName>
        <description>Name of Salesforce Fields utilized for Automation project</description>
        <inlineHelpText>Name of Salesforce Fields utilized for Automation project</inlineHelpText>
        <label>Salesforce Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_Readiness__c</fullName>
        <description>For internal Biz Ops purposes - to track status of mapping GPPD fields --&gt; NPI --&gt; SF for Automation project</description>
        <inlineHelpText>For internal Biz Ops purposes - to track status of mapping GPPD fields --&gt; NPI --&gt; SF for Automation project</inlineHelpText>
        <label>Automation Readiness</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Security_Architecture_Review__c</fullName>
        <label>Security/Architecture Review</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Review_Status__c</fullName>
        <label>Security Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Security_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Security Reviewer</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Employee must be Active in the Core Directory</errorMessage>
            <filterItems>
                <field>Motorola_Core_Directory__c.HRStatus__c</field>
                <operation>equals</operation>
                <value>A</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Security_Risk_Level__c</fullName>
        <label>Security Risk Level</label>
        <picklist>
            <picklistValues>
                <fullName>S0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Skip_LRB_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by DevApp approval process.</description>
        <label>Skip LRB Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stable_count__c</fullName>
        <label>Stable_count</label>
        <summaryForeignKey>Stable_Application__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Technical_Accounting_Input__c</fullName>
        <description>Technical Accounting guidance about whether Remaining Balance can be written off for lump-sum IP Settlement</description>
        <inlineHelpText>Technical Accounting guidance about whether Remaining Balance can be written off for lump-sum IP Settlement</inlineHelpText>
        <label>Technical Accounting Input</label>
        <picklist>
            <picklistValues>
                <fullName>DIRECTION NEEDED - CREDIT BALANCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOLD - BORDERLINE BALANCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO - LOW BALANCE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YES - AUTOMATE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Top_10_Competitive_App__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This app is part of a Top 10 Competitive app list</description>
        <inlineHelpText>This app is part of a Top 10 Competitive app list;
The field is automatically checked, based on whether the app is related to a Competitive Source</inlineHelpText>
        <label>Top 10 Competitive App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_of_incorrectly_generated_Dev_App__c</fullName>
        <description>Total = #Defects (Include on BOM) + #Defects (auto-generated) for Automation project metric tracking</description>
        <inlineHelpText>Total = #Defects (Include on BOM) + #Defects (auto-generated) for Automation project metric tracking</inlineHelpText>
        <label>Total # of incorrectly generated Dev-App</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL_for_Download__c</fullName>
        <description>If the app is NOT available via Android Market, please enter the URL where it is available for download</description>
        <inlineHelpText>If the app is NOT available via Android Market, please enter the URL where it is available for download</inlineHelpText>
        <label>URL for Download</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Unique_App__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique_App</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WM_7_Java__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Application build on Windows Mobile 7.0 Java?</inlineHelpText>
        <label>WM 7 Java</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WM_7_Native__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Application build on Windows Mobile 7 Native?</inlineHelpText>
        <label>WM 7 Native</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WM_Pocket_PC_5_x_Java__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Application build on Windows Mobile Pocket PC 5.x Java?</inlineHelpText>
        <label>WM Pocket PC 5.x Java</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WM_Pocket_PC_5_x_Native__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Application build on Windows Mobile Pocket PC 5.x Native?</inlineHelpText>
        <label>WM Pocket PC 5.x Native</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WM_Pocket_PC_6_x_Java__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Application build on Windows Mobile Pocket PC 6.x Java?</inlineHelpText>
        <label>WM Pocket PC 6.x Java</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WM_Pocket_PC_6_x_Native__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Application build on Windows Mobile Pocket PC 6.x Native?</inlineHelpText>
        <label>WM Pocket PC 6.x Native</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WM_Smartphone_5_x_Java__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Application build on Windows Mobile Smartphone 5.x Java??</inlineHelpText>
        <label>WM Smartphone 5.x Java</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WM_Smartphone_5_x_Native__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Application build on Windows Mobile Smartphone 5.x Native?</inlineHelpText>
        <label>WM Smartphone 5.x Native</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WM_Smartphone_6_x_Java__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Application build on Windows Mobile Smartphone 6.x Java?</inlineHelpText>
        <label>WM Smartphone 6.x Java</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WM_Smartphone_6_x_Native__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Application build on Windows Mobile Smartphone 6.x Native?</inlineHelpText>
        <label>WM Smartphone 6.x Native</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Welcome_Package_Sent__c</fullName>
        <description>Technical and process info provided by EMD PM</description>
        <inlineHelpText>Technical and process info provided by EMD PM</inlineHelpText>
        <label>Welcome Package Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WinMo_Top_10_Handango_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WinMo Top 10 Handango App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WinMo_Top_10_Handmark_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WinMo Top 10 Handmark App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WinMobile_Catalog_Top_5_Smartphone_App__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Windows Mobile Catalog Top 5 - Smartphone (Non-Touchscreen)</description>
        <label>WinMobile Catalog Top 5 Smartphone App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this application require 3rd party approval?</inlineHelpText>
        <label>3rd Party Approval Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iPad__c</fullName>
        <defaultValue>false</defaultValue>
        <label>iPad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iPhone_App_Directory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Listed in the iPhone App Directory</description>
        <inlineHelpText>Listed in the iPhone App Directory</inlineHelpText>
        <label>iPhone App Directory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iPhone__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this Application build on iPhone?</inlineHelpText>
        <label>iPhone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_App_Versions__c</fullName>
        <label># of App Versions</label>
        <summaryForeignKey>App_Version__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Avalible_Countries__c</fullName>
        <inlineHelpText>The total # of countries where this application is available. This does NOT mean MOT can legally ship to this country.</inlineHelpText>
        <label># of Avalible Countries</label>
        <summaryFilterItems>
            <field>Application_Country__c.Relationship__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </summaryFilterItems>
        <summaryForeignKey>Application_Country__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Devices__c</fullName>
        <inlineHelpText>The total # of devices this app is on</inlineHelpText>
        <label># of Devices</label>
        <summaryForeignKey>DeviceApplicationAssoc__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_MOT_Legally_Shippable_Countries__c</fullName>
        <inlineHelpText>The total # of countries where MOT can legally ship this application to</inlineHelpText>
        <label># of MOT Legally Shippable Countries</label>
        <summaryFilterItems>
            <field>Application_Country__c.Relationship__c</field>
            <operation>equals</operation>
            <value>Legal</value>
        </summaryFilterItems>
        <summaryForeignKey>Application_Country__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Mandatory_Stables__c</fullName>
        <inlineHelpText>The total # of Stables this application is Mandatory on.</inlineHelpText>
        <label># of Mandatory Stables</label>
        <summaryFilterItems>
            <field>Stable_Application__c.Stable_App_Status__c</field>
            <operation>equals</operation>
            <value>Mandatory</value>
        </summaryFilterItems>
        <summaryForeignKey>Stable_Application__c.Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>third_party_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this is a CARRIER APP, who is the 3rd Party Account?</description>
        <inlineHelpText>If this is a CARRIER APP, who is the 3rd Party Account?</inlineHelpText>
        <label>3rd Party Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications (3rd Party Account)</relationshipLabel>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All_Apps</fullName>
        <columns>NAME</columns>
        <columns>Application_Type__c</columns>
        <columns>Application_Sub_Type__c</columns>
        <columns>Package_Name__c</columns>
        <columns>Application_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Apps</label>
    </listViews>
    <listViews>
        <fullName>BLUR_Apps</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Cost_Per_Unit__c</columns>
        <columns>Royalty_Low__c</columns>
        <columns>Royalty_High__c</columns>
        <columns>Rev_Share_App__c</columns>
        <columns>Rev_Share_Details__c</columns>
        <columns>Royalty_Description__c</columns>
        <columns>Application_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>BLUR Apps</label>
        <sharedTo>
            <roleAndSubordinates>MotoDevAdmin</roleAndSubordinates>
            <roleAndSubordinates>MotoDevExecutiveVP</roleAndSubordinates>
            <roleAndSubordinates>MotoDevSrManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Carrier_Apps_needing_Royalty_Data</fullName>
        <booleanFilter>(1 AND 2 AND 3) or (1 AND 2 AND 4) or (1 AND 2 AND 5)</booleanFilter>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Application_Type__c</columns>
        <columns>Royalty_Low__c</columns>
        <columns>Royalty_High__c</columns>
        <columns>Royalty_Current__c</columns>
        <columns>Royalty_Payment_Attribute__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Contract_Number__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>Carrier App</value>
        </filters>
        <filters>
            <field>Royalty_Low__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Royalty_High__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Royalty_Current__c</field>
            <operation>equals</operation>
        </filters>
        <label>Carrier Apps needing Royalty Data</label>
    </listViews>
    <listViews>
        <fullName>IP_Apps</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>IP Settlement</value>
        </filters>
        <label>IP Apps</label>
        <sharedTo>
            <roleAndSubordinates>MotoDevAdmin</roleAndSubordinates>
            <roleAndSubordinates>MotoDevExecutiveVP</roleAndSubordinates>
            <roleAndSubordinates>MotoDevSrManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Jill_s_Games_Apps</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Android_Availability_Date__c</columns>
        <columns>Android_Top_100__c</columns>
        <columns>Account__c</columns>
        <columns>Android_Status__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Category__c</field>
            <operation>equals</operation>
            <value>Games</value>
        </filters>
        <label>Jill&apos;s Games Apps</label>
        <sharedTo>
            <roleAndSubordinates>MotoDevAdmin</roleAndSubordinates>
            <roleAndSubordinates>MotoDevExecutiveVP</roleAndSubordinates>
            <roleAndSubordinates>MotoDevSrManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Partner_Apps_Mahad</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Application_ID__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Application_Sub_Type__c</columns>
        <columns>Available_For_Use__c</columns>
        <columns>Carrier_Furnished__c</columns>
        <columns>Carrier_Branded__c</columns>
        <columns>Carrier_Mandated__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>startsWith</operation>
            <value>partner</value>
        </filters>
        <label>Partner Apps (Mahad)</label>
    </listViews>
    <listViews>
        <fullName>Preload_Apps_that_need_sub_type</fullName>
        <columns>NAME</columns>
        <columns>Application_Type__c</columns>
        <columns>Application_Sub_Type__c</columns>
        <columns>Account__c</columns>
        <columns>Application_ID__c</columns>
        <columns>AcctOwnerApp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>reed</value>
        </filters>
        <label>Preload Apps that need sub-type</label>
    </listViews>
    <listViews>
        <fullName>Preloads_with_NO_Sub</fullName>
        <columns>Account_Name__c</columns>
        <columns>NAME</columns>
        <columns>Application_Type__c</columns>
        <columns>Application_Sub_Type__c</columns>
        <columns>AcctOwnerApp__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>Preload</value>
        </filters>
        <filters>
            <field>Application_Sub_Type__c</field>
            <operation>equals</operation>
        </filters>
        <label>Preloads with NO Sub</label>
    </listViews>
    <listViews>
        <fullName>Pursue_for_China</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Pursue_for_China__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Android__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Application_Type__c</field>
            <operation>notEqual</operation>
            <value>Embedded,Services</value>
        </filters>
        <label>Pursue for China</label>
        <sharedTo>
            <roleAndSubordinates>MotoDevAdmin</roleAndSubordinates>
            <roleAndSubordinates>MotoDevBusOpsAdmin</roleAndSubordinates>
            <roleAndSubordinates>MotoDevDirector</roleAndSubordinates>
            <roleAndSubordinates>MotoDevExecutiveCLevel</roleAndSubordinates>
            <roleAndSubordinates>MotoDevExecutiveSVP</roleAndSubordinates>
            <roleAndSubordinates>MotoDevExecutiveVP</roleAndSubordinates>
            <roleAndSubordinates>MotoDevManager</roleAndSubordinates>
            <roleAndSubordinates>MotoDevSrDirector</roleAndSubordinates>
            <roleAndSubordinates>MotoDevSrManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Services_Type_Field_NOT_NULL</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Services Type Field NOT NULL</label>
        <sharedTo>
            <role>MotoDevAdmin</role>
            <roleAndSubordinates>MotoDevExecutiveVP</roleAndSubordinates>
            <roleAndSubordinates>MotoDevSrManager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>all_tiered_royalty_applications</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Royalty_Current__c</columns>
        <columns>Royalty_Description__c</columns>
        <columns>Royalty_Payment_Attribute__c</columns>
        <columns>Royalty_High__c</columns>
        <columns>Royalty_Low__c</columns>
        <columns>Application_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Royalty_Payment_Attribute__c</field>
            <operation>equals</operation>
            <value>Rate Table Perpetual,Rate Table Annual,Allocated Cost</value>
        </filters>
        <label>all tiered royalty applications</label>
    </listViews>
    <listViews>
        <fullName>ip_settlement_apps</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Application_ID__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Royalty_Current__c</columns>
        <columns>Royalty_Description__c</columns>
        <columns>Royalty_High__c</columns>
        <columns>Royalty_Low__c</columns>
        <columns>Royalty_Payment_Attribute__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application_Type__c</field>
            <operation>equals</operation>
            <value>IP Settlement</value>
        </filters>
        <label>ip settlement apps</label>
    </listViews>
    <nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Application_must_have_an_Account</fullName>
        <active>false</active>
        <description>App must have a related Account</description>
        <errorConditionFormula>(Account__c )=&quot;&quot;</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>There must be a related Account for this Application</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Carrier_Branded_required_if_Carrier_Ap</fullName>
        <active>true</active>
        <description>Carrier Branded field cannot be blank if an app is Type &quot;Carrier App&quot;</description>
        <errorConditionFormula>and(ISPICKVAL(Application_Type__c ,&quot;Carrier App&quot;) ,ISPICKVAL(Carrier_Branded__c ,&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Carrier_Branded__c</errorDisplayField>
        <errorMessage>If this is a Carrier App, please select a value for the field &quot;Carrier Branded&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Carrier_Furnished_required_if_Carrier_Ap</fullName>
        <active>true</active>
        <description>Carrier Furnished field cannot be blank if an app is Type &quot;Carrier App&quot;</description>
        <errorConditionFormula>and(ISPICKVAL(Application_Type__c ,&quot;Carrier App&quot;) ,ISPICKVAL( Carrier_Furnished__c,&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Carrier_Furnished__c</errorDisplayField>
        <errorMessage>If this is a Carrier App, please select a value for the field &quot;Carrier Furnished&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Carrier_Mandated_required_if_Carrier_Ap</fullName>
        <active>true</active>
        <description>Carrier Mandated field cannot be blank if an app is Type &quot;Carrier App&quot;</description>
        <errorConditionFormula>and(ISPICKVAL(Application_Type__c ,&quot;Carrier App&quot;) ,ISPICKVAL(  Carrier_Mandated__c ,&quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Carrier_Mandated__c</errorDisplayField>
        <errorMessage>If this is a Carrier App, please select a value for the field &quot;Carrier Mandated&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_for_Single_GOV</fullName>
        <active>true</active>
        <description>Checks to ensure only a single contract is GOV</description>
        <errorConditionFormula>Count_of_Gov__c &gt;1</errorConditionFormula>
        <errorMessage>Error:  Only one related Contract may be checked as &quot;Governing&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contracts_Current_Phase_Require_Royalty</fullName>
        <active>false</active>
        <description>If an app is related to a contract in Phase &quot;Approvals&quot; or &quot;Execution and Processing&quot; , ensure that the three Royalty fields on the app record (High, Low, Current) are populated as well as the field &quot;Royalty Payment Attribute&quot;.</description>
        <errorConditionFormula>AND(OR(Application_Contract_Phase__c == &apos;Approvals&apos;, Application_Contract_Phase__c == &apos;Execution and Processing&apos;), OR(  ISNULL( Royalty_Current__c ),  ISNULL( Royalty_High__c ) ,  ISNULL( Royalty_Low__c ), ISPICKVAL( Royalty_Payment_Attribute__c , &apos;&apos;)  ))</errorConditionFormula>
        <errorMessage>This application is tied to a contract in Phase &quot;Approvals&quot; or &quot;Execution and Processing&quot;. You must select an appropriate royalty payment attribute and enter values for Royalty High, Royalty Current and Royalty Low fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_required_if_Exclusive_1</fullName>
        <active>true</active>
        <description>Date required if the Exclusive box is checked</description>
        <errorConditionFormula>AND(Exclusivity__c  = TRUE,isnull( Exclusivity_Start__c))</errorConditionFormula>
        <errorDisplayField>Exclusivity_Start__c</errorDisplayField>
        <errorMessage>&quot;Exclusive&quot; box is checked, so please enter a START Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_required_if_Exclusive_2</fullName>
        <active>true</active>
        <description>Date required if the Exclusive box is checked</description>
        <errorConditionFormula>AND(Exclusivity__c = TRUE,isnull( Exclusivity_End__c))</errorConditionFormula>
        <errorDisplayField>Exclusivity_End__c</errorDisplayField>
        <errorMessage>&quot;Exclusive&quot; box is checked, so please enter an END Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mot_Proprietary_API</fullName>
        <active>true</active>
        <description>If this app contains a mot proprietary api, then require them to be listed</description>
        <errorConditionFormula>ISPICKVAL( Leveraging_Motorola_Proprietary_APIs__c , &quot;Yes&quot;) &amp;&amp;
( Motorola_Proprietary_APIs_supported_list__c == NULL)</errorConditionFormula>
        <errorMessage>If the Leveraging Motorola Proprietary API picklist is marked yes, then enter the motorola proprietary api supported list</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_executed_contract_without_royalty</fullName>
        <active>false</active>
        <errorConditionFormula>IF( AND( ISCHANGED( Application_Contract_Status__c ), Application_Contract_Status__c = &apos;Fully Executed&apos;, OR( ISNULL(Royalty_Low__c ) , ISNULL(Royalty_High__c ) ) ) , true, false)</errorConditionFormula>
        <errorMessage>Contract cannot be set to Fully Executed without it&apos;s Royalty High/Low/Current fields being filled out.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Preload_Apps_must_has_SubType</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Application_Type__c , &apos;Preload&apos;)  &amp;&amp;  ISPICKVAL( Application_Sub_Type__c ,  &apos;&apos; )</errorConditionFormula>
        <errorDisplayField>Application_Sub_Type__c</errorDisplayField>
        <errorMessage>Must select a SubType for Preload Applications.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Available_for_Use</fullName>
        <active>false</active>
        <description>Prior to &quot;Automate Partner Checklist Approval&quot; being checked, &quot;Available for Use&quot; should be checked.</description>
        <errorConditionFormula>AND( Automate_Partner_Checklist_Approval__c == true,  Available_For_Use__c == false )</errorConditionFormula>
        <errorMessage>&apos;Available for Use&apos; MUST be checked if &apos;Automate Partner Checklist Approval&apos; gets checked.</errorMessage>
    </validationRules>
</CustomObject>